2008-06-25 Ladislav Hagara <hgr@vabo.cz>
	* utils/usbmon: new spell, USB traffic monitor

2008-06-23 Ivan Lezhnjov Jr. <ivan.lezhnjov.jr@sourcemage.org>
	* kde-apps/kuwc: new spell, Ultimate WebShots Converter for KDE

2008-06-23 Ladislav Hagara <hgr@vabo.cz>
	* utils/colorcat: new spell, a color cat :-)

2008-06-23 Alexander Tsamutali <astsmtl@gmail.com>
	* audio-soft/speech-dispatcher: new spell, common interface to speech
	  synthesis

2008-06-22 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
	* graphics/qtpfsgui: new spell, a tool for creating HDR images

2008-06-21 Alexander Tsamutali <astsmtl@gmail.com>
	* shell-term-fm/termit: new spell, simple terminal emulator

2008-06-21 Vlad Glagolev <stealth@sourcemage.org>
	* crypto/loop-AES.gpg moved to index, needed by some spells from the
	  different sections

2008-06-20 Arjan Bouter <abouter@sourcemage.org>
	* windowmanagers/xfce: removed deprecated spell

2008-06-20 Vlad Glagolev <stealth@sourcemage.org>
	* ruby-raa/ruby-gpgme: new spell, ruby interface to GnuPG Made Easy (GPGME)

2008-06-19 Elisamuel Resto <ryuji@sourcemage.org>
	* kde-look/qtcurve-kde4: new spell, Qt4 Widget style to unify GNOME/KDE4
	  applications' look

2008-06-18 Eric Sandall <sandalle@sourcemage.org>
	* kde4-look/plasma-wifi: Added a WiFi signal strength plasmoid

2008-06-18 Ivan Lezhnjov Jr. <ivan.lezhnjov.jr@sourcemage.org>
	* kde-look/qtcurve-gtk2: new spell, QT Widget style to unify GNOME/KDE
          applications' look
	* disk/bin2iso: new spell, a BIN to ISO converter

2008-06-18 Arjan Bouter <abouter@sourcemage.org>
	* windowmanagers/metisse: removed windowmanager, not deprecating
	  someone might have an old build running.

2008-06-18 Vlad Glagolev <stealth@sourcemage.org>
	* lua-forge/luacurl: new spell, Lua module providing Internet browsing based
	  on the cURL lib
	* lua-forge/luasys: new spell, portable Lua library providing access to
	  system and networking functions