@@ -1,0 +1,13 @@
+           SPELL=libglpng
+         VERSION=1.45.orig
+          SOURCE="${SPELL}_${VERSION}.tar.gz"
+   SOURCE_URL[0]=http://ftp.de.debian.org/debian/pool/main/libg/${SPELL}/${SOURCE}
+     SOURCE_HASH=sha512:41ca8e9430e097b59e57175999c53f451f60beda1e53a4341f497f77c01ab5e07dcf74dc0639d59051826f509cc1a72a3b6031512fb7d1203063d74e0997145a
+SOURCE_DIRECTORY="${BUILD_DIRECTORY}/${SPELL}-${VERSION}"
+        WEB_SITE="http://web.archive.org/web/20051104082809/http://www.wyatt100.freeserve.co.uk/"
+      LICENSE[0]=BSD
+         ENTERED=20080626
+           SHORT="A library to load png as GL Textures"
+cat << EOF
+a library to load png as GL textures
+EOF
