@@ -1,0 +1,4 @@
+default_pre_build  &&
+cd $SOURCE_DIRECTORY  &&
+cp $SPELL_DIRECTORY/Makefile $SOURCE_DIRECTORY/  &&
+sed -i "s:png/png.h:png.h:" src/glpng.c
