@@ -1,0 +1,4 @@
+2008-06-26 Andraž "ruskie" Levstik <ruskie@mages.ath.cx>
+	* BUILD, PRE_BUILD, DETAILS: spell created
+	* Makefile: added from debian
+
