@@ -1,3 +1,6 @@
+2008-06-26 Andraž "ruskie" Levstik <ruskie@mages.ath.cx>
+	* graphics-libs/libglpng: new spell, a png to gl texture library
+
 2008-06-25 Ladislav Hagara <hgr@vabo.cz>
 	* utils/usbmon: new spell, USB traffic monitor
 
